--- a/mynumpytest.ipynb
+++ b/mynumpytest.ipynb
@@ -26,9 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8390006.51007\n",
+      "8390006.510070048\n"
+     ]
+    }
+   ],
    "source": [
     "result = numpy.inner(v1,v2)\n",
     "print(result)\n",
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -47,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20.5 ms ± 342 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "20.2 ms ± 355 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -65,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21.6 ms ± 1.22 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "22 ms ± 1.14 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -93,8 +102,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8386718.5\n",
-      "8386713.5\n"
+      "8388694.0\n",
+      "8388685.0\n"
      ]
     }
    ],
@@ -114,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.6 ms ± 688 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "13.6 ms ± 89.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -125,14 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.3 ms ± 180 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "10.3 ms ± 109 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -143,25 +152,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v1 = v1.astype('complex64')\n",
-    "v2 = v2.astype('complex64')"
+    "v1 = numpy.random.rand(arraysize) + numpy.random.rand(arraysize)*1j\n",
+    "v2 = numpy.random.rand(arraysize)+ numpy.random.rand(arraysize)*1j"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(8383403+0j)\n",
-      "(8383399+0j)\n"
+      "(594.0588187035173+16778757.00778118j)\n",
+      "(594.0588188824477+16778757.00778102j)\n"
      ]
     }
    ],
@@ -174,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27.8 ms ± 357 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "49.3 ms ± 265 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -192,14 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21.6 ms ± 1.07 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "40.3 ms ± 421 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -210,10 +219,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v1 = v1.astype('complex64')\n",
+    "v2 = v2.astype('complex64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(583.5+16769509j)\n",
+      "(601.71875+16769502j)\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = numpy.inner(v1,v2)\n",
+    "print(result)\n",
+    "result = mylib.inner(v1,v2)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27 ms ± 236 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "result = numpy.inner(v1,v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.4 ms ± 460 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "result = mylib.inner(v1,v2)"
+   ]
   }
  ],
  "metadata": {
