--- a/mynumpytest.ipynb
+++ b/mynumpytest.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arraysize = 256 * 256 *256 * 2\n",
+    "arraysize = 256 * 256 *256 * 16\n",
     "v1 = numpy.random.rand(arraysize)\n",
     "v2 = numpy.random.rand(arraysize)"
    ]
@@ -33,8 +33,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8390006.51007\n",
-      "8390006.510070048\n"
+      "67106658.73405102\n",
+      "67106658.73405072\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20.2 ms ± 355 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "163 ms ± 651 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22 ms ± 1.14 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "165 ms ± 500 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -102,8 +102,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8388694.0\n",
-      "8388685.0\n"
+      "66661100.0\n",
+      "66660848.0\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.6 ms ± 89.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "110 ms ± 3.42 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.3 ms ± 109 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "88.1 ms ± 12.9 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -156,6 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#complex128\n",
     "v1 = numpy.random.rand(arraysize) + numpy.random.rand(arraysize)*1j\n",
     "v2 = numpy.random.rand(arraysize)+ numpy.random.rand(arraysize)*1j"
    ]
@@ -169,8 +170,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(594.0588187035173+16778757.00778118j)\n",
-      "(594.0588188824477+16778757.00778102j)\n"
+      "(1800.1979461833835+134205641.06652352j)\n",
+      "(1800.1979450974613+134205641.06652497j)\n"
      ]
     }
    ],
@@ -190,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "49.3 ms ± 265 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "400 ms ± 4.51 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -208,7 +209,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40.3 ms ± 421 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "327 ms ± 6.36 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -236,8 +237,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(583.5+16769509j)\n",
-      "(601.71875+16769502j)\n"
+      "(2080+131199410j)\n",
+      "(1501.5+131199856j)\n"
      ]
     }
    ],
@@ -257,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27 ms ± 236 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "207 ms ± 10.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -275,7 +276,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20.4 ms ± 460 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "164 ms ± 1.88 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
